--- a/src/Events/Events.css
+++ b/src/Events/Events.css
@@ -1,16 +1,3 @@
-.imageRow {
-  display: flex;
-  justify-content: center;
-}
-
-.imageCaption {
-  text-align: center;
-}
-
-.eventInfo {
-  font-size: 1.3em;
-}
-
 .eventCaption {
   margin-top: 0.5em;
   text-align: center;
@@ -33,16 +20,6 @@
   height: auto;
 }
 
-.eventImagePortrait {
-  margin-bottom: 0.2em;
-  margin-right: 0.01em;
-  display: block;
-  max-width:20.1em;
-  max-height:29.6em;
-  width: auto;
-  height: auto;
-}
-
 .eventImageLandscape {
   margin-bottom: 0.2em;
   margin-right: 0.01em;
@@ -54,9 +31,23 @@
   height: auto;
 }
 
+.eventImagePortrait {
+  margin-bottom: 0.2em;
+  margin-right: 0.01em;
+  display: block;
+  max-width:20.1em;
+  max-height:29.6em;
+  width: auto;
+  height: auto;
+}
+
 .eventImageSingle {
   display: inline-block;
   height: 28em;
+}
+
+.eventInfo {
+  font-size: 1.3em;
 }
 
 .eventTitle {
@@ -66,4 +57,31 @@
 
 .eventsPageContainer {
   margin-top: 5em;
+}
+
+.imageRow {
+  display: flex;
+  justify-content: center;
+}
+
+.imageCaption {
+  text-align: center;
+  width: 100%;
+}
+
+@media all and (max-width: 1347px) {
+  .eventImageLandscape {
+    margin-top: 0em;
+  }
+
+  .eventsPageContainer {
+    margin-top: 0em;
+  }
+}
+
+@media all and (max-width: 425px) {
+  .eventImageLandscape {
+    max-width: 23.68em;
+    max-height: 16.08em;
+  }
 }
