--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,3 +1,15 @@
 .homeBackground {
+  margin-left: 0.5em;
   text-align: center;
+}
+
+@media all and (max-width: 425px) {
+  .homeBackgroundImage {
+    display: block;
+    /* margin-left: 1em; */
+    max-width: 24em;
+    max-height: 30.24em;
+    width: auto;
+    height: auto;
+  }
 }
