--- a/src/Portfolio/Portfolio.css
+++ b/src/Portfolio/Portfolio.css
@@ -19,3 +19,9 @@
   font-size: 1.5em;
   text-align: center;
 }
+
+@media all and (max-width: 768px) {
+  .portfolioContentContainer {
+    margin-left: 6%;
+  }
+}
